syntax = "proto3";

package api;

import "google/api/annotations.proto";

option go_package = "KTPM-Coffee-Shop/server/api";

service UsersService {
    rpc Greeting(EmptyRequest) returns (SimpleResponse){
        option (google.api.http) = {
            get: '/Users'
        };
    };
}

message EmptyRequest {}

message SimpleResponse {
    string message = 1;
}